--- a/package.json
+++ b/package.json
@@ -13,6 +13,27 @@
     "type": "git",
     "url": "https://github.com/Alec-Aldrine-Lakra/marx.git"
   },
+  "author": {
+    "name" : "Alec Aldrine Lakra",
+    "email" : "lakraalec123@gmail.com"
+  },
+  "keywords": [
+    "wysiwyg",
+    "slate",
+    "paper",
+    "medium",
+    "WYSIWYG Editor",
+    "Rich Text Editor",
+    "Paste From Word",
+    "The Communist Manifesto",
+    "Communism",
+    "Karl Marx",
+    "Marxist",
+    "ckeditor",
+    "tinymce",
+    "quill",
+    "open source editor"
+  ],
   "private": false,
   "dependencies": {
     "@angular/animations": "~10.1.0",
