--- a/projects/marx-editor/package.json
+++ b/projects/marx-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marx-editor",
-  "version": "1.0.10",
+  "version": "1.0.20",
   "peerDependencies": {
     "@angular/common": "^10.1.6",
     "@angular/core": "^10.1.6"
@@ -12,6 +12,11 @@
       "name" : "Alec Aldrine Lakra",
       "email" : "lakraalec123@gmail.com"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Alec-Aldrine-Lakra/marx.git"
+  },
+  "license": "MIT",
   "keywords": [
     "wysiwyg",
     "slate",
