--- a/projects/marx-editor/package.json
+++ b/projects/marx-editor/package.json
@@ -2,8 +2,8 @@
   "name": "marx-editor",
   "version": "1.0.20",
   "peerDependencies": {
-    "@angular/common": "^10.1.6",
-    "@angular/core": "^10.1.6"
+    "@angular/common": "~11.2.3",
+    "@angular/core": "~11.2.3"
   },
   "dependencies": {
     "tslib": "^2.0.0"
